--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Riipen_SSD.ViewModels.SingleJudgeCriteriaScoreVM
-
+<link href="~/Styles/Judge_Participant.css" rel="stylesheet" />
 @{
     ViewBag.Title = "team";
 }
@@ -7,7 +7,7 @@
 
 @section scripts{
     <script src="~/JavaScript/Judge_Team_form.js"></script>
-
+    <script src="~/JavaScript/Judge-Participant.js"></script>
 }
 
 <div>
