--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
@@ -15,6 +15,7 @@ body{
     width:inherit;
     padding:20px 45px 30px 45px;
     display:block;
+    margin-bottom:30px
 }
 
 footer{
@@ -93,4 +94,14 @@ footer{
     font-size:2em;
     line-height: 2em;
     display:inline-block
+}
+
+
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+
+    .searchIn {
+        font-size: 2em;
+        line-height: 2em;
+        display: inline-block;
+    }
 }
