--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -35,21 +34,7 @@
                         </div>
                     </div>
                 </div>           
-                 <div class="row">
-                <p>
-                    Admin account: adminaccount@gmail.com <br />
-                </p>
-                <p>
-                    Judge accounts: andrewstec@hotmail.com password: Pa$$w0rd <br />
-                    andrewhui@gmail.com    Password: Pa$$w0rd
-                </p>
-                <p>
-                    Participant account: mario@hotmail.com, Password : Pa$$w0rd <br />
-                    jackiechan@gmail.com    Password: Pa$$w0rd
-
-                </p>
-
-            </div>
+                 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
@@ -63,7 +48,33 @@
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
                     </p>*@
             }
+
+            
+
         </section>
+    </div>
+    <div class="col-xs-12 col-sm-4 col-md-4 ">
+        <p>
+            <span class="bold">Admin account</span>:<br />
+             adminaccount@gmail.com <br />
+        </p>
+        <p>
+            <span class="bold">
+                Judge accounts: 
+            </span>
+            <br />
+                andrewstec@hotmail.com password: Pa$$w0rd <br />
+                andrewhui@gmail.com    Password: Pa$$w0rd
+</p>
+        <p>
+            <span class="bold">
+                Participant account:
+             </span>
+            <br /> mario@hotmail.com, Password : Pa$$w0rd <br />
+                jackiechan@gmail.com    Password: Pa$$w0rd
+
+</p>
+
     </div>
 
 </div>
