Starting on the mass email function

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -118,6 +118,10 @@
         }
     </tbody>
 </table>
+
+<form class="form-group" method="post">
+    <button type="submit" class="btn btn-success">Publish Contest</button>
+</form>
     <p>
         @Html.ActionLink("Edit", "EditContest", new {  ContestID = Model.ContestID  }) |
         @Html.ActionLink("Back to List", "Index")
