--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -25,7 +25,7 @@ else if (User.IsInRole("Admin"))
 }
 
 <div class="header">
-    <p class="title">Contest: <span class="small-title">@ViewBag.contestName</span></p>
+    <p class="title">Contest: <span class="small-title">@ViewBag.contestName</span></p><br />
 
     <div class="searchForm">
         @using (Html.BeginForm("Contest", "Judge", FormMethod.Get))
